# baberu

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/LLMFactory/: factory.py
src/LLMFactory/image/: base.py  imagen.py  openai.py
src/LLMFactory/llm/: base.py  claude.py  deepseek.py  gemini.py  grok.py  openai.py  openrouter.py
src/LLMFactory/transcription/: elevenlabs.py  fireworks.py  openai.py
src/baberu/: __main__.py  constants.py
src/baberu/LLMFactory/: factory.py
src/baberu/LLMFactory/image/: dalle.py  imagen.py  openai.py
src/baberu/LLMFactory/llm/: base.py  claude.py  deepseek.py  gemini.py  grok.py  openai.py  openrouter.py
src/baberu/LLMFactory/transcription/: base.py  elevenlabs.py  fireworks.py  openai.py  whisper.py
src/baberu/defaults/: default_config.yaml
src/baberu/setup/: args_setup.py  config_setup.py  logging_setup.py
src/baberu/subtitling/: elevenlabs_utils.py  sub_correction.py  sub_translation.py  sub_twopass.py  sub_utils.py  types.py
src/baberu/tools/: av_utils.py  file_utils.py  transcript_utils.py
src/baberu/transcription/: transcript_chunked.py  transcript_conversion.py  transcript_segmented.py
